--- a/style.css
+++ b/style.css
@@ -1,4 +1,14 @@
+* {
+    margin: 0;
+    padding: 0;
+}
 
+:root {
+    --yellow: color: hsl(47, 88%, 63%);
+    --white: color: hsl(0, 0%, 100%);
+    --gray-500: color: hsl(0, 0%, 42%);
+    --gray-950: color: hsl(0, 0%, 7%);
+}
 
 
 
