--- a/style.css
+++ b/style.css
@@ -10,7 +10,16 @@
     --gray-950: color: hsl(0, 0%, 7%);
 }
 
+@font-face {
+    font-family: 'Figtree';
+    src: url(/assets/fonts/Figtree-VariableFont_wght.ttf);
+}
 
+@font-face {
+    font-family: 'Figtree';
+    src: url(/assets/fonts/Figtree-Italic-VariableFont_wght.ttf);
+    font-style: italic;
+}
 
 
 
