--- a/style.css
+++ b/style.css
@@ -21,7 +21,10 @@
     font-style: italic;
 }
 
-
+body {
+    font-family: 'Figtree';
+    background-color: var(--yellow);
+}
 
 .attribution { font-size: 11px; text-align: center; }
 .attribution a { color: hsl(228, 45%, 44%); }
