--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Figtree', sans-serif;
 }
 
 :root {
-    --yellow: color: hsl(47, 88%, 63%);
-    --white: color: hsl(0, 0%, 100%);
-    --gray-500: color: hsl(0, 0%, 42%);
-    --gray-950: color: hsl(0, 0%, 7%);
+    --yellow: hsl(47, 88%, 63%);
+    --white: hsl(0, 0%, 100%);
+    --gray-500: hsl(0, 0%, 42%);
+    --gray-950: hsl(0, 0%, 7%);
 }
 
 @font-face {
@@ -22,8 +23,19 @@
 }
 
 body {
-    font-family: 'Figtree';
     background-color: var(--yellow);
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+}
+
+.container-card {
+    background-color: var(--white);
+    max-width: 300px;
+    min-height: 350px;
 }
 
 .attribution { font-size: 11px; text-align: center; }
