--- a/style.css
+++ b/style.css
@@ -70,6 +70,12 @@ span.author-name {
 h2 {
     font-size: 24px;
     line-height: 150%;
+    transition: color 0.5s ease;
+    cursor: pointer;
+}
+
+h2:hover {
+    color: var(--yellow);
 }
 
 .text {
