--- a/style.css
+++ b/style.css
@@ -80,7 +80,8 @@ h2:hover {
 
 .text {
     font-size: 16px;
-    color: var(--gray-500)
+    color: var(--gray-500);
+    line-height: 150%;
 }
 
 .author-info {
