--- a/style.css
+++ b/style.css
@@ -94,6 +94,7 @@ h2:hover {
     width: 1.8rem;
 }
 
-
 .attribution { font-size: 11px; text-align: center; }
 .attribution a { color: hsl(228, 45%, 44%); }
+
+/* Add responsive design below here */
